Implementando SmtpEmailService com servidor do Google

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
-default.sender=marcelo.sakaguchi@outlook.com
-default.recipient=marcelo.sakaguchi@outlook.com
+default.sender=msakaguchidev@gmail.com
+default.recipient=msakaguchidev@gmail.com
+
