--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.profiles.active=dev
 default.sender=msakaguchidev@gmail.com
 default.recipient=msakaguchidev@gmail.com
 
+jwt.secret=SequenciaDeCaracteresParaAssinarToken
+jwt.expiration=60000
